[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/inventory/inventory_slot.png" type="Texture" id=1]
[ext_resource path="res://src/ui/inventory/inventory_slot.gd" type="Script" id=3]

[node name="Slot" type="TextureRect" groups=["inventory_slot"]]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
script = ExtResource( 3 )
type = 3

[node name="Item" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="ItemInfo" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.219608 )
margin_left = 24.0
margin_top = 22.0
margin_right = 167.0
margin_bottom = 141.0
mouse_filter = 2

[node name="V" type="VBoxContainer" parent="ItemInfo"]
margin_right = 86.0
margin_bottom = 72.0

[node name="Name" type="Label" parent="ItemInfo/V"]
margin_right = 86.0
margin_bottom = 14.0

[node name="Description" type="Label" parent="ItemInfo/V"]
margin_top = 18.0
margin_right = 86.0
margin_bottom = 32.0

[connection signal="gui_input" from="." to="." method="_on_Slot_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
